JPR_IDE/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RBOOLEAN
    RBREAK
    RCASE
    RCHAR
    RCONTINUE
    RDEFAULT
    RELSE
    RFOR
    RFUNC
    RIF
    RLENGTH
    RMAIN
    RNULL
    RREAD
    RRETURN
    RROUND
    RSWITCH
    RTOLOWER
    RTOUPPER
    RTRUNCATE
    RTYPEOF
    RWHILE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr finins
Rule 5     instruccion -> declaracion_instr finins
Rule 6     instruccion -> asignacion_instr finins
Rule 7     finins -> PUNTOCOMA
Rule 8     finins -> <empty>
Rule 9     instruccion -> error PUNTOCOMA
Rule 10    imprimir_instr -> RPRINT PARA expresion PARC
Rule 11    declaracion_instr -> tipo ID IGUAL expresion
Rule 12    asignacion_instr -> ID IGUAL expresion
Rule 13    tipo -> RINT
Rule 14    tipo -> RDOUBLE
Rule 15    tipo -> RSTRING
Rule 16    expresion -> expresion MAS expresion
Rule 17    expresion -> expresion MENOS expresion
Rule 18    expresion -> expresion POR expresion
Rule 19    expresion -> expresion DIV expresion
Rule 20    expresion -> expresion POT expresion
Rule 21    expresion -> expresion MOD expresion
Rule 22    expresion -> expresion MENORQUE expresion
Rule 23    expresion -> expresion MAYORQUE expresion
Rule 24    expresion -> expresion IGUALIGUAL expresion
Rule 25    expresion -> expresion DIFERENTE expresion
Rule 26    expresion -> expresion MENORIGUAL expresion
Rule 27    expresion -> expresion MAYORIGUAL expresion
Rule 28    expresion -> expresion AND expresion
Rule 29    expresion -> expresion OR expresion
Rule 30    expresion -> MENOS expresion
Rule 31    expresion -> NOT expresion
Rule 32    expresion -> PARA expresion PARC
Rule 33    expresion -> ID
Rule 34    expresion -> ENTERO
Rule 35    expresion -> DECIMAL
Rule 36    expresion -> CADENA
Rule 37    expresion -> BOOLEANO
Rule 38    expresion -> CARACTER

Terminals, with rules where they appear

AND                  : 28
BOOLEANO             : 37
CADENA               : 36
CARACTER             : 38
DECIMAL              : 35
DIFERENTE            : 25
DIV                  : 19
ENTERO               : 34
ID                   : 11 12 33
IGUAL                : 11 12
IGUALIGUAL           : 24
MAS                  : 16
MAYORIGUAL           : 27
MAYORQUE             : 23
MENORIGUAL           : 26
MENORQUE             : 22
MENOS                : 17 30
MOD                  : 21
NOT                  : 31
OR                   : 29
PARA                 : 10 32
PARC                 : 10 32
POR                  : 18
POT                  : 20
PUNTOCOMA            : 7 9
RBOOLEAN             : 
RBREAK               : 
RCASE                : 
RCHAR                : 
RCONTINUE            : 
RDEFAULT             : 
RDOUBLE              : 14
RELSE                : 
RFOR                 : 
RFUNC                : 
RIF                  : 
RINT                 : 13
RLENGTH              : 
RMAIN                : 
RNULL                : 
RPRINT               : 10
RREAD                : 
RRETURN              : 
RROUND               : 
RSTRING              : 15
RSWITCH              : 
RTOLOWER             : 
RTOUPPER             : 
RTRUNCATE            : 
RTYPEOF              : 
RWHILE               : 
error                : 9

Nonterminals, with rules where they appear

asignacion_instr     : 6
declaracion_instr    : 5
expresion            : 10 11 12 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32
finins               : 4 5 6
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
tipo                 : 11

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . asignacion_instr finins
    (9) instruccion -> . error PUNTOCOMA
    (10) imprimir_instr -> . RPRINT PARA expresion PARC
    (11) declaracion_instr -> . tipo ID IGUAL expresion
    (12) asignacion_instr -> . ID IGUAL expresion
    (13) tipo -> . RINT
    (14) tipo -> . RDOUBLE
    (15) tipo -> . RSTRING

    error           shift and go to state 7
    RPRINT          shift and go to state 8
    ID              shift and go to state 10
    RINT            shift and go to state 11
    RDOUBLE         shift and go to state 12
    RSTRING         shift and go to state 13

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    tipo                           shift and go to state 9

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . asignacion_instr finins
    (9) instruccion -> . error PUNTOCOMA
    (10) imprimir_instr -> . RPRINT PARA expresion PARC
    (11) declaracion_instr -> . tipo ID IGUAL expresion
    (12) asignacion_instr -> . ID IGUAL expresion
    (13) tipo -> . RINT
    (14) tipo -> . RDOUBLE
    (15) tipo -> . RSTRING

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 7
    RPRINT          shift and go to state 8
    ID              shift and go to state 10
    RINT            shift and go to state 11
    RDOUBLE         shift and go to state 12
    RSTRING         shift and go to state 13

    instruccion                    shift and go to state 14
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    tipo                           shift and go to state 9

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RINT            reduce using rule 3 (instrucciones -> instruccion .)
    RDOUBLE         reduce using rule 3 (instrucciones -> instruccion .)
    RSTRING         reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr . finins
    (7) finins -> . PUNTOCOMA
    (8) finins -> .

    PUNTOCOMA       shift and go to state 16
    error           reduce using rule 8 (finins -> .)
    RPRINT          reduce using rule 8 (finins -> .)
    ID              reduce using rule 8 (finins -> .)
    RINT            reduce using rule 8 (finins -> .)
    RDOUBLE         reduce using rule 8 (finins -> .)
    RSTRING         reduce using rule 8 (finins -> .)
    $end            reduce using rule 8 (finins -> .)

    finins                         shift and go to state 15

state 5

    (5) instruccion -> declaracion_instr . finins
    (7) finins -> . PUNTOCOMA
    (8) finins -> .

    PUNTOCOMA       shift and go to state 16
    error           reduce using rule 8 (finins -> .)
    RPRINT          reduce using rule 8 (finins -> .)
    ID              reduce using rule 8 (finins -> .)
    RINT            reduce using rule 8 (finins -> .)
    RDOUBLE         reduce using rule 8 (finins -> .)
    RSTRING         reduce using rule 8 (finins -> .)
    $end            reduce using rule 8 (finins -> .)

    finins                         shift and go to state 17

state 6

    (6) instruccion -> asignacion_instr . finins
    (7) finins -> . PUNTOCOMA
    (8) finins -> .

    PUNTOCOMA       shift and go to state 16
    error           reduce using rule 8 (finins -> .)
    RPRINT          reduce using rule 8 (finins -> .)
    ID              reduce using rule 8 (finins -> .)
    RINT            reduce using rule 8 (finins -> .)
    RDOUBLE         reduce using rule 8 (finins -> .)
    RSTRING         reduce using rule 8 (finins -> .)
    $end            reduce using rule 8 (finins -> .)

    finins                         shift and go to state 18

state 7

    (9) instruccion -> error . PUNTOCOMA

    PUNTOCOMA       shift and go to state 19


state 8

    (10) imprimir_instr -> RPRINT . PARA expresion PARC

    PARA            shift and go to state 20


state 9

    (11) declaracion_instr -> tipo . ID IGUAL expresion

    ID              shift and go to state 21


state 10

    (12) asignacion_instr -> ID . IGUAL expresion

    IGUAL           shift and go to state 22


state 11

    (13) tipo -> RINT .

    ID              reduce using rule 13 (tipo -> RINT .)


state 12

    (14) tipo -> RDOUBLE .

    ID              reduce using rule 14 (tipo -> RDOUBLE .)


state 13

    (15) tipo -> RSTRING .

    ID              reduce using rule 15 (tipo -> RSTRING .)


state 14

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RINT            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RDOUBLE         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RSTRING         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 15

    (4) instruccion -> imprimir_instr finins .

    error           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RPRINT          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RINT            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RDOUBLE         reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RSTRING         reduce using rule 4 (instruccion -> imprimir_instr finins .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr finins .)


state 16

    (7) finins -> PUNTOCOMA .

    error           reduce using rule 7 (finins -> PUNTOCOMA .)
    RPRINT          reduce using rule 7 (finins -> PUNTOCOMA .)
    ID              reduce using rule 7 (finins -> PUNTOCOMA .)
    RINT            reduce using rule 7 (finins -> PUNTOCOMA .)
    RDOUBLE         reduce using rule 7 (finins -> PUNTOCOMA .)
    RSTRING         reduce using rule 7 (finins -> PUNTOCOMA .)
    $end            reduce using rule 7 (finins -> PUNTOCOMA .)


state 17

    (5) instruccion -> declaracion_instr finins .

    error           reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RPRINT          reduce using rule 5 (instruccion -> declaracion_instr finins .)
    ID              reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RINT            reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RDOUBLE         reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RSTRING         reduce using rule 5 (instruccion -> declaracion_instr finins .)
    $end            reduce using rule 5 (instruccion -> declaracion_instr finins .)


state 18

    (6) instruccion -> asignacion_instr finins .

    error           reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RPRINT          reduce using rule 6 (instruccion -> asignacion_instr finins .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RINT            reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RDOUBLE         reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RSTRING         reduce using rule 6 (instruccion -> asignacion_instr finins .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr finins .)


state 19

    (9) instruccion -> error PUNTOCOMA .

    error           reduce using rule 9 (instruccion -> error PUNTOCOMA .)
    RPRINT          reduce using rule 9 (instruccion -> error PUNTOCOMA .)
    ID              reduce using rule 9 (instruccion -> error PUNTOCOMA .)
    RINT            reduce using rule 9 (instruccion -> error PUNTOCOMA .)
    RDOUBLE         reduce using rule 9 (instruccion -> error PUNTOCOMA .)
    RSTRING         reduce using rule 9 (instruccion -> error PUNTOCOMA .)
    $end            reduce using rule 9 (instruccion -> error PUNTOCOMA .)


state 20

    (10) imprimir_instr -> RPRINT PARA . expresion PARC
    (16) expresion -> . expresion MAS expresion
    (17) expresion -> . expresion MENOS expresion
    (18) expresion -> . expresion POR expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion POT expresion
    (21) expresion -> . expresion MOD expresion
    (22) expresion -> . expresion MENORQUE expresion
    (23) expresion -> . expresion MAYORQUE expresion
    (24) expresion -> . expresion IGUALIGUAL expresion
    (25) expresion -> . expresion DIFERENTE expresion
    (26) expresion -> . expresion MENORIGUAL expresion
    (27) expresion -> . expresion MAYORIGUAL expresion
    (28) expresion -> . expresion AND expresion
    (29) expresion -> . expresion OR expresion
    (30) expresion -> . MENOS expresion
    (31) expresion -> . NOT expresion
    (32) expresion -> . PARA expresion PARC
    (33) expresion -> . ID
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . CADENA
    (37) expresion -> . BOOLEANO
    (38) expresion -> . CARACTER

    MENOS           shift and go to state 25
    NOT             shift and go to state 26
    PARA            shift and go to state 23
    ID              shift and go to state 27
    ENTERO          shift and go to state 28
    DECIMAL         shift and go to state 29
    CADENA          shift and go to state 30
    BOOLEANO        shift and go to state 31
    CARACTER        shift and go to state 32

    expresion                      shift and go to state 24

state 21

    (11) declaracion_instr -> tipo ID . IGUAL expresion

    IGUAL           shift and go to state 33


state 22

    (12) asignacion_instr -> ID IGUAL . expresion
    (16) expresion -> . expresion MAS expresion
    (17) expresion -> . expresion MENOS expresion
    (18) expresion -> . expresion POR expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion POT expresion
    (21) expresion -> . expresion MOD expresion
    (22) expresion -> . expresion MENORQUE expresion
    (23) expresion -> . expresion MAYORQUE expresion
    (24) expresion -> . expresion IGUALIGUAL expresion
    (25) expresion -> . expresion DIFERENTE expresion
    (26) expresion -> . expresion MENORIGUAL expresion
    (27) expresion -> . expresion MAYORIGUAL expresion
    (28) expresion -> . expresion AND expresion
    (29) expresion -> . expresion OR expresion
    (30) expresion -> . MENOS expresion
    (31) expresion -> . NOT expresion
    (32) expresion -> . PARA expresion PARC
    (33) expresion -> . ID
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . CADENA
    (37) expresion -> . BOOLEANO
    (38) expresion -> . CARACTER

    MENOS           shift and go to state 25
    NOT             shift and go to state 26
    PARA            shift and go to state 23
    ID              shift and go to state 27
    ENTERO          shift and go to state 28
    DECIMAL         shift and go to state 29
    CADENA          shift and go to state 30
    BOOLEANO        shift and go to state 31
    CARACTER        shift and go to state 32

    expresion                      shift and go to state 34

state 23

    (32) expresion -> PARA . expresion PARC
    (16) expresion -> . expresion MAS expresion
    (17) expresion -> . expresion MENOS expresion
    (18) expresion -> . expresion POR expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion POT expresion
    (21) expresion -> . expresion MOD expresion
    (22) expresion -> . expresion MENORQUE expresion
    (23) expresion -> . expresion MAYORQUE expresion
    (24) expresion -> . expresion IGUALIGUAL expresion
    (25) expresion -> . expresion DIFERENTE expresion
    (26) expresion -> . expresion MENORIGUAL expresion
    (27) expresion -> . expresion MAYORIGUAL expresion
    (28) expresion -> . expresion AND expresion
    (29) expresion -> . expresion OR expresion
    (30) expresion -> . MENOS expresion
    (31) expresion -> . NOT expresion
    (32) expresion -> . PARA expresion PARC
    (33) expresion -> . ID
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . CADENA
    (37) expresion -> . BOOLEANO
    (38) expresion -> . CARACTER

    MENOS           shift and go to state 25
    NOT             shift and go to state 26
    PARA            shift and go to state 23
    ID              shift and go to state 27
    ENTERO          shift and go to state 28
    DECIMAL         shift and go to state 29
    CADENA          shift and go to state 30
    BOOLEANO        shift and go to state 31
    CARACTER        shift and go to state 32

    expresion                      shift and go to state 35

state 24

    (10) imprimir_instr -> RPRINT PARA expresion . PARC
    (16) expresion -> expresion . MAS expresion
    (17) expresion -> expresion . MENOS expresion
    (18) expresion -> expresion . POR expresion
    (19) expresion -> expresion . DIV expresion
    (20) expresion -> expresion . POT expresion
    (21) expresion -> expresion . MOD expresion
    (22) expresion -> expresion . MENORQUE expresion
    (23) expresion -> expresion . MAYORQUE expresion
    (24) expresion -> expresion . IGUALIGUAL expresion
    (25) expresion -> expresion . DIFERENTE expresion
    (26) expresion -> expresion . MENORIGUAL expresion
    (27) expresion -> expresion . MAYORIGUAL expresion
    (28) expresion -> expresion . AND expresion
    (29) expresion -> expresion . OR expresion

    PARC            shift and go to state 36
    MAS             shift and go to state 37
    MENOS           shift and go to state 38
    POR             shift and go to state 39
    DIV             shift and go to state 40
    POT             shift and go to state 41
    MOD             shift and go to state 42
    MENORQUE        shift and go to state 43
    MAYORQUE        shift and go to state 44
    IGUALIGUAL      shift and go to state 45
    DIFERENTE       shift and go to state 46
    MENORIGUAL      shift and go to state 47
    MAYORIGUAL      shift and go to state 48
    AND             shift and go to state 49
    OR              shift and go to state 50


state 25

    (30) expresion -> MENOS . expresion
    (16) expresion -> . expresion MAS expresion
    (17) expresion -> . expresion MENOS expresion
    (18) expresion -> . expresion POR expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion POT expresion
    (21) expresion -> . expresion MOD expresion
    (22) expresion -> . expresion MENORQUE expresion
    (23) expresion -> . expresion MAYORQUE expresion
    (24) expresion -> . expresion IGUALIGUAL expresion
    (25) expresion -> . expresion DIFERENTE expresion
    (26) expresion -> . expresion MENORIGUAL expresion
    (27) expresion -> . expresion MAYORIGUAL expresion
    (28) expresion -> . expresion AND expresion
    (29) expresion -> . expresion OR expresion
    (30) expresion -> . MENOS expresion
    (31) expresion -> . NOT expresion
    (32) expresion -> . PARA expresion PARC
    (33) expresion -> . ID
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . CADENA
    (37) expresion -> . BOOLEANO
    (38) expresion -> . CARACTER

    MENOS           shift and go to state 25
    NOT             shift and go to state 26
    PARA            shift and go to state 23
    ID              shift and go to state 27
    ENTERO          shift and go to state 28
    DECIMAL         shift and go to state 29
    CADENA          shift and go to state 30
    BOOLEANO        shift and go to state 31
    CARACTER        shift and go to state 32

    expresion                      shift and go to state 51

state 26

    (31) expresion -> NOT . expresion
    (16) expresion -> . expresion MAS expresion
    (17) expresion -> . expresion MENOS expresion
    (18) expresion -> . expresion POR expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion POT expresion
    (21) expresion -> . expresion MOD expresion
    (22) expresion -> . expresion MENORQUE expresion
    (23) expresion -> . expresion MAYORQUE expresion
    (24) expresion -> . expresion IGUALIGUAL expresion
    (25) expresion -> . expresion DIFERENTE expresion
    (26) expresion -> . expresion MENORIGUAL expresion
    (27) expresion -> . expresion MAYORIGUAL expresion
    (28) expresion -> . expresion AND expresion
    (29) expresion -> . expresion OR expresion
    (30) expresion -> . MENOS expresion
    (31) expresion -> . NOT expresion
    (32) expresion -> . PARA expresion PARC
    (33) expresion -> . ID
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . CADENA
    (37) expresion -> . BOOLEANO
    (38) expresion -> . CARACTER

    MENOS           shift and go to state 25
    NOT             shift and go to state 26
    PARA            shift and go to state 23
    ID              shift and go to state 27
    ENTERO          shift and go to state 28
    DECIMAL         shift and go to state 29
    CADENA          shift and go to state 30
    BOOLEANO        shift and go to state 31
    CARACTER        shift and go to state 32

    expresion                      shift and go to state 52

state 27

    (33) expresion -> ID .

    PARC            reduce using rule 33 (expresion -> ID .)
    MAS             reduce using rule 33 (expresion -> ID .)
    MENOS           reduce using rule 33 (expresion -> ID .)
    POR             reduce using rule 33 (expresion -> ID .)
    DIV             reduce using rule 33 (expresion -> ID .)
    POT             reduce using rule 33 (expresion -> ID .)
    MOD             reduce using rule 33 (expresion -> ID .)
    MENORQUE        reduce using rule 33 (expresion -> ID .)
    MAYORQUE        reduce using rule 33 (expresion -> ID .)
    IGUALIGUAL      reduce using rule 33 (expresion -> ID .)
    DIFERENTE       reduce using rule 33 (expresion -> ID .)
    MENORIGUAL      reduce using rule 33 (expresion -> ID .)
    MAYORIGUAL      reduce using rule 33 (expresion -> ID .)
    AND             reduce using rule 33 (expresion -> ID .)
    OR              reduce using rule 33 (expresion -> ID .)
    PUNTOCOMA       reduce using rule 33 (expresion -> ID .)
    error           reduce using rule 33 (expresion -> ID .)
    RPRINT          reduce using rule 33 (expresion -> ID .)
    ID              reduce using rule 33 (expresion -> ID .)
    RINT            reduce using rule 33 (expresion -> ID .)
    RDOUBLE         reduce using rule 33 (expresion -> ID .)
    RSTRING         reduce using rule 33 (expresion -> ID .)
    $end            reduce using rule 33 (expresion -> ID .)


state 28

    (34) expresion -> ENTERO .

    PARC            reduce using rule 34 (expresion -> ENTERO .)
    MAS             reduce using rule 34 (expresion -> ENTERO .)
    MENOS           reduce using rule 34 (expresion -> ENTERO .)
    POR             reduce using rule 34 (expresion -> ENTERO .)
    DIV             reduce using rule 34 (expresion -> ENTERO .)
    POT             reduce using rule 34 (expresion -> ENTERO .)
    MOD             reduce using rule 34 (expresion -> ENTERO .)
    MENORQUE        reduce using rule 34 (expresion -> ENTERO .)
    MAYORQUE        reduce using rule 34 (expresion -> ENTERO .)
    IGUALIGUAL      reduce using rule 34 (expresion -> ENTERO .)
    DIFERENTE       reduce using rule 34 (expresion -> ENTERO .)
    MENORIGUAL      reduce using rule 34 (expresion -> ENTERO .)
    MAYORIGUAL      reduce using rule 34 (expresion -> ENTERO .)
    AND             reduce using rule 34 (expresion -> ENTERO .)
    OR              reduce using rule 34 (expresion -> ENTERO .)
    PUNTOCOMA       reduce using rule 34 (expresion -> ENTERO .)
    error           reduce using rule 34 (expresion -> ENTERO .)
    RPRINT          reduce using rule 34 (expresion -> ENTERO .)
    ID              reduce using rule 34 (expresion -> ENTERO .)
    RINT            reduce using rule 34 (expresion -> ENTERO .)
    RDOUBLE         reduce using rule 34 (expresion -> ENTERO .)
    RSTRING         reduce using rule 34 (expresion -> ENTERO .)
    $end            reduce using rule 34 (expresion -> ENTERO .)


state 29

    (35) expresion -> DECIMAL .

    PARC            reduce using rule 35 (expresion -> DECIMAL .)
    MAS             reduce using rule 35 (expresion -> DECIMAL .)
    MENOS           reduce using rule 35 (expresion -> DECIMAL .)
    POR             reduce using rule 35 (expresion -> DECIMAL .)
    DIV             reduce using rule 35 (expresion -> DECIMAL .)
    POT             reduce using rule 35 (expresion -> DECIMAL .)
    MOD             reduce using rule 35 (expresion -> DECIMAL .)
    MENORQUE        reduce using rule 35 (expresion -> DECIMAL .)
    MAYORQUE        reduce using rule 35 (expresion -> DECIMAL .)
    IGUALIGUAL      reduce using rule 35 (expresion -> DECIMAL .)
    DIFERENTE       reduce using rule 35 (expresion -> DECIMAL .)
    MENORIGUAL      reduce using rule 35 (expresion -> DECIMAL .)
    MAYORIGUAL      reduce using rule 35 (expresion -> DECIMAL .)
    AND             reduce using rule 35 (expresion -> DECIMAL .)
    OR              reduce using rule 35 (expresion -> DECIMAL .)
    PUNTOCOMA       reduce using rule 35 (expresion -> DECIMAL .)
    error           reduce using rule 35 (expresion -> DECIMAL .)
    RPRINT          reduce using rule 35 (expresion -> DECIMAL .)
    ID              reduce using rule 35 (expresion -> DECIMAL .)
    RINT            reduce using rule 35 (expresion -> DECIMAL .)
    RDOUBLE         reduce using rule 35 (expresion -> DECIMAL .)
    RSTRING         reduce using rule 35 (expresion -> DECIMAL .)
    $end            reduce using rule 35 (expresion -> DECIMAL .)


state 30

    (36) expresion -> CADENA .

    PARC            reduce using rule 36 (expresion -> CADENA .)
    MAS             reduce using rule 36 (expresion -> CADENA .)
    MENOS           reduce using rule 36 (expresion -> CADENA .)
    POR             reduce using rule 36 (expresion -> CADENA .)
    DIV             reduce using rule 36 (expresion -> CADENA .)
    POT             reduce using rule 36 (expresion -> CADENA .)
    MOD             reduce using rule 36 (expresion -> CADENA .)
    MENORQUE        reduce using rule 36 (expresion -> CADENA .)
    MAYORQUE        reduce using rule 36 (expresion -> CADENA .)
    IGUALIGUAL      reduce using rule 36 (expresion -> CADENA .)
    DIFERENTE       reduce using rule 36 (expresion -> CADENA .)
    MENORIGUAL      reduce using rule 36 (expresion -> CADENA .)
    MAYORIGUAL      reduce using rule 36 (expresion -> CADENA .)
    AND             reduce using rule 36 (expresion -> CADENA .)
    OR              reduce using rule 36 (expresion -> CADENA .)
    PUNTOCOMA       reduce using rule 36 (expresion -> CADENA .)
    error           reduce using rule 36 (expresion -> CADENA .)
    RPRINT          reduce using rule 36 (expresion -> CADENA .)
    ID              reduce using rule 36 (expresion -> CADENA .)
    RINT            reduce using rule 36 (expresion -> CADENA .)
    RDOUBLE         reduce using rule 36 (expresion -> CADENA .)
    RSTRING         reduce using rule 36 (expresion -> CADENA .)
    $end            reduce using rule 36 (expresion -> CADENA .)


state 31

    (37) expresion -> BOOLEANO .

    PARC            reduce using rule 37 (expresion -> BOOLEANO .)
    MAS             reduce using rule 37 (expresion -> BOOLEANO .)
    MENOS           reduce using rule 37 (expresion -> BOOLEANO .)
    POR             reduce using rule 37 (expresion -> BOOLEANO .)
    DIV             reduce using rule 37 (expresion -> BOOLEANO .)
    POT             reduce using rule 37 (expresion -> BOOLEANO .)
    MOD             reduce using rule 37 (expresion -> BOOLEANO .)
    MENORQUE        reduce using rule 37 (expresion -> BOOLEANO .)
    MAYORQUE        reduce using rule 37 (expresion -> BOOLEANO .)
    IGUALIGUAL      reduce using rule 37 (expresion -> BOOLEANO .)
    DIFERENTE       reduce using rule 37 (expresion -> BOOLEANO .)
    MENORIGUAL      reduce using rule 37 (expresion -> BOOLEANO .)
    MAYORIGUAL      reduce using rule 37 (expresion -> BOOLEANO .)
    AND             reduce using rule 37 (expresion -> BOOLEANO .)
    OR              reduce using rule 37 (expresion -> BOOLEANO .)
    PUNTOCOMA       reduce using rule 37 (expresion -> BOOLEANO .)
    error           reduce using rule 37 (expresion -> BOOLEANO .)
    RPRINT          reduce using rule 37 (expresion -> BOOLEANO .)
    ID              reduce using rule 37 (expresion -> BOOLEANO .)
    RINT            reduce using rule 37 (expresion -> BOOLEANO .)
    RDOUBLE         reduce using rule 37 (expresion -> BOOLEANO .)
    RSTRING         reduce using rule 37 (expresion -> BOOLEANO .)
    $end            reduce using rule 37 (expresion -> BOOLEANO .)


state 32

    (38) expresion -> CARACTER .

    PARC            reduce using rule 38 (expresion -> CARACTER .)
    MAS             reduce using rule 38 (expresion -> CARACTER .)
    MENOS           reduce using rule 38 (expresion -> CARACTER .)
    POR             reduce using rule 38 (expresion -> CARACTER .)
    DIV             reduce using rule 38 (expresion -> CARACTER .)
    POT             reduce using rule 38 (expresion -> CARACTER .)
    MOD             reduce using rule 38 (expresion -> CARACTER .)
    MENORQUE        reduce using rule 38 (expresion -> CARACTER .)
    MAYORQUE        reduce using rule 38 (expresion -> CARACTER .)
    IGUALIGUAL      reduce using rule 38 (expresion -> CARACTER .)
    DIFERENTE       reduce using rule 38 (expresion -> CARACTER .)
    MENORIGUAL      reduce using rule 38 (expresion -> CARACTER .)
    MAYORIGUAL      reduce using rule 38 (expresion -> CARACTER .)
    AND             reduce using rule 38 (expresion -> CARACTER .)
    OR              reduce using rule 38 (expresion -> CARACTER .)
    PUNTOCOMA       reduce using rule 38 (expresion -> CARACTER .)
    error           reduce using rule 38 (expresion -> CARACTER .)
    RPRINT          reduce using rule 38 (expresion -> CARACTER .)
    ID              reduce using rule 38 (expresion -> CARACTER .)
    RINT            reduce using rule 38 (expresion -> CARACTER .)
    RDOUBLE         reduce using rule 38 (expresion -> CARACTER .)
    RSTRING         reduce using rule 38 (expresion -> CARACTER .)
    $end            reduce using rule 38 (expresion -> CARACTER .)


state 33

    (11) declaracion_instr -> tipo ID IGUAL . expresion
    (16) expresion -> . expresion MAS expresion
    (17) expresion -> . expresion MENOS expresion
    (18) expresion -> . expresion POR expresion
    (19) expresion -> . expresion DIV expresion
    (20) expresion -> . expresion POT expresion
    (21) expresion -> . expresion MOD expresion
    (22) expresion -> . expresion MENORQUE expresion
    (23) expresion -> . expresion MAYORQUE expresion
    (24) expresion -> . expresion IGUALIGUAL expresion
    (25) expresion -> . expresion DIFERENTE expresion
    (26) expresion -> . expresion MENORIGUAL expresion
    (27) expresion -> . expresion MAYORIGUAL expresion
    (28) expresion -> . expresion AND expresion
    (29) expresion -> . expresion OR expresion
    (30) expresion -> . MENOS expresion
    (31) expresion -> . NOT expresion
    (32) expresion -> . PARA expresion PARC
    (33) expresion -> . ID
    (34) expresion -> . ENTERO
    (35) expresion -> . DECIMAL
    (36) expresion -> . CADENA
    (37) expresion -> . BOOLEANO
    (38) expresion -> . CARACTER

    MENOS           shift and go to state 25
    NOT             shift and go to state 26
    PARA            shift and go to state 23
    ID              shift and go to state 27
    ENTERO          shift and go to state 28
    DECIMAL         shift and go to state 29
    CADENA          shift and go to state 30
    BOOLEANO        shift and go to state 31
    CARACTER        shift and go to state 32

    expresion                      shift and go to state 53

state 34

    (12) asignacion_instr -> ID IGUAL expresion .
    (16) expresion -> expresion . MAS expresion
    (17) expresion -> expresion . MENOS expresion
    (18) expresion -> expresion . POR expresion
    (19) expresion -> expresion . DIV expresion
    (20) expresion -> expresion . POT expresion
    (21) expresion -> expresion . MOD expresion
    (22) expresion -> expresion . MENORQUE expresion
    (23) expresion -> expresion . MAYORQUE expresion
    (24) expresion -> expresion . IGUALIGUAL expresion
    (25) expresion -> expresion . DIFERENTE expresion
    (26) expresion -> expresion . MENORIGUAL expresion
    (27) expresion -> expresion . MAYORIGUAL expresion
    (28) expresion -> expresion . AND expresion
    (29) expresion -> expresion . OR expresion
